--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+server.port=8082
 
+spring.datasource.url=jdbc:mysql://localhost:3306/critter
+spring.datasource.username=critter_dev_user
+spring.datasource.password=critter_dev_password
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+#should be set to validate in a production environment
+spring.jpa.hibernate.ddl-auto=update
+
+
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
