added sql command to properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #should be set to validate in a production environment
 spring.jpa.hibernate.ddl-auto=update
 
-
-
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+#Use these SQL commands on MYSQL Workbench to get the schema up and running.
+
+# CREATE SCHEMA `critter`;
+# CREATE USER 'critter_dev_user' IDENTIFIED BY 'critter_dev_password';
+# GRANT ALL ON plants.* TO 'critter_dev_user';
